<resources>
    <string name="app_name">Mome</string>
    <string name="home">Home</string>
    <string name="new_amp_hot"><![CDATA[New & Hot]]></string>
    <string name="my_list">My List</string>

    <string name="downloads">Downloads</string>
    <string name="image">image</string>
    <string name="play">Play</string>
    <string name="info">Info</string>
    <string name="button">button</string>
    <string name="categories">Categories</string>
    <string name="all_categories">All categories</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">TV Shows</string>
    <string name="remind_me">Remind Me</string>
    <string name="reminder_set">Reminder Set</string>
    <string name="download">Download</string>

    <string name="episodes">EPISODES</string>
    <string name="trailers_amp_more"><![CDATA[TRAILERS & MORE]]></string>
    <string name="more_like_this">MORE LIKE THIS</string>
    <string name="title_episode">%1$d. %2$s</string>

    <string name="text_run_time">%1$s</string>
    <string name="text_run_time_episodes">%1$d Episodes</string>
    <string name="text_run_time_season">%1$d Season</string>
    <string name="text_18_plus">18+</string>
    <string name="text_13_plus">13+</string>
    <string name="text_title_trailer">Trailer %1$d: %2$s</string>

    <string name="status_rumored_label">Rumored</string>
    <string name="status_planned_label">Planned</string>
    <string name="status_in_production_label">In production</string>
    <string name="status_post_production_label">Post production</string>
    <string name="status_released_label">Released</string>
    <string name="status_cancelled_label">Cancelled</string>

    <string name="tv_series_status_returning_label">Returning series</string>
    <string name="tv_series_status_planned_label">Planned</string>
    <string name="tv_series_status_in_production_label">In production</string>
    <string name="tv_series_status_ended_label">Ended</string>
    <string name="tv_series_status_cancelled_label">Cancelled</string>
    <string name="tv_series_status_pilot_label">Pilot</string>

    <string name="tv_series_type_documentary_label">Documentary</string>
    <string name="tv_series_type_news_label">News</string>
    <string name="tv_series_type_miniseries_label">Miniseries</string>
    <string name="tv_series_type_reality_label">Reality</string>
    <string name="tv_series_type_scripted_label">Scripted</string>
    <string name="tv_series_type_talk_show_label">Talk show</string>
    <string name="tv_series_type_video_label">Video</string>

    <string name="sort_type_popularity_label">Popularity</string>
    <string name="sort_type_release_date_label">Date</string>
    <string name="sort_type_vote_average_label">Score</string>
    <string name="sort_type_title_label">Title</string>
    <string name="sort_type_vote_count_label">Vote count</string>

    <string name="title_trending">Trending Now</string>
    <string name="title_popular">Popular</string>
    <string name="title_top_rate">Top rated of all time</string>
    <string name="title_explore">Explore Movies</string>

    <string name="title_trending_tv_show">Trending this month</string>
    <string name="title_top_rate_tv_show">Top rated of all time</string>
    <string name="title_airing_today_tv_show">Airing today</string>
    <string name="title_explore_tv_show">Explore Series</string>

    <string-array name="speed_dialog">
        <item>0.5x</item>
        <item>0.75x</item>
        <item>1x(Normal)</item>
        <item>1.25x</item>
        <item>1.5x</item>
    </string-array>
    <string name="negative_option_speed_dialog">Cancel</string>
    <string name="loading">Loading…</string>
    <string name="text_title_speed">Speed(%1$s)</string>

    <string name="trailer">Trailer</string>

    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="message_bottom_sign_up">Don\'t have an account?</string>
    <string name="message_bottom_sign_in">Already have an account?</string>
    <string name="message_in_divider">or continue with</string>
    <string name="message_in_divider_2">or</string>
    <string name="button_sign_in_home_auth">Sign in with password</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="create_your_account">Create Your Account</string>
    <string name="login_to_your_account">Login to Your Account</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="let_s_you_in">Let\'s you in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_text_forgot_password">Forgot the password?</string>
    <string name="message_error_password">Your password must contain between 4 and 60 characters</string>

    <string name="error_default_message">Something wrong</string>
    <string name="message_feature_coming_soon">Feature coming soon</string>

    <string name="top_searches">Top Searches</string>
    <string name="search_for_show_movie_genre_etc">Search for show, movie, genre, etc.</string>
    <string name="movies_amp_tv"><![CDATA[Movies & TV]]></string>
    <string name="title_message_empty_search">Oh darn. We don\'t have that</string>
    <string name="message_empty_search">Try searching for another movie, show, actor, director, or genre.</string>
    <string name="message_empty_my_list"><![CDATA[Add movies & TV shows to your list so you can easily find them later]]></string>
    <string name="button_my_list">find something to watch</string>
    <string name="message_add_list">Added to My List</string>
    <string name="message_remove_my_list">Remove from My List</string>

    <string name="text_arrival_date">Coming %1$s</string>

    <string name="profile">Profile</string>
    <string name="name_default">Mome member</string>
    <string name="app_setting">App settings</string>
    <string name="account">Account</string>
    <string name="help">Help</string>
    <string name="sign_out">Sign Out</string>
    <string name="delete_account">Delete Account</string>
    <string name="delete_account_content">"Are you sure you want to Delete?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="button_lock">Lock</string>
    <string name="button_episodes">Episodes</string>
    <string name="button_next_ep">Next Ep.</string>
    <string name="button_audio_subtitles"><![CDATA[Audio & Subtitles]]></string>

    <string name="title_share">Seen "%1$s" on Mome yet?</string>

</resources>