<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgHomeCover"
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:adjustViewBounds="false"
            android:contentDescription="@string/image"
            android:cropToPadding="false"
            android:scaleType="fitXY"
            app:layout_constraintTop_toTopOf="parent"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/gradient_top"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="200dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@drawable/gradient_bottom"/>

        <TextView
            android:id="@+id/txtMovieGenres"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="45dp"
            android:gravity="bottom|center_horizontal"
            android:textColor="@color/text_color"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/imgHomeCover" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center_horizontal|center_vertical"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/txtMovieGenres">

            <LinearLayout
                android:id="@+id/btnList"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="64dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginBottom="5dp"
                    android:contentDescription="@string/image"
                    app:srcCompat="@drawable/ic_add" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/netflix_sans_light"
                    android:gravity="center"
                    android:text="@string/my_list"
                    android:textColor="@color/text_color"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <com.catelt.mome.ui.components.PlayButton
                android:id="@+id/btnPlay"
                android:layout_width="87dp"
                android:layout_height="0dp"
                android:layout_margin="3dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btnInfo"
                app:layout_constraintStart_toEndOf="@+id/btnList"
                app:layout_constraintTop_toTopOf="@+id/btnList"
                tools:layout_constraintCircleRadius="10dp" />

            <LinearLayout
                android:id="@+id/btnInfo"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="64dp"
                android:gravity="center"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="@+id/btnList"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/btnList"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginBottom="5dp"
                    android:contentDescription="@string/image"
                    app:srcCompat="@drawable/ic_info" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/info"
                    android:textColor="@color/text_color"
                    android:textSize="12sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>